--- a/themes.html
+++ b/themes.html
@@ -12,10 +12,10 @@
 <link href="https://styx-static.github.io/styx-site/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" id="navbar">
 <div class="container">
 <div class="navbar-header">
-  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
     <span class="sr-only">Toggle navigation</span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
@@ -23,13 +23,13 @@
   </button>
   <a class="navbar-brand" href="https://styx-static.github.io/styx-site/">Styx Static Site Generator</a>
 </div>
-<div class="collapse navbar-collapse" id="navbar">
+<div class="collapse navbar-collapse" id="navbar-collapse">
 <ul class="nav navbar-nav navbar-right">
 <li><a href="https://styx-static.github.io/styx-site/news.html">News</a></li>
 <li><a href="https://styx-static.github.io/styx-site/documentation/index.html">Documentation</a></li>
 <li class="active"><a href="https://styx-static.github.io/styx-site/themes.html">Themes</a></li>
 <li><a href="https://github.com/styx-static/styx/">GitHub <i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://styx-static.github.io/styx-site/feed.xml"><i class="fa fa-rss-square" aria-hidden="true"></i></a></li>
+<li><a href="https://styx-static.github.io/styx-site/feed.xml"><i class="fa fa-rss-square" aria-hidden="true"></i><span class="sr-only">RSS</span></a></li>
 </ul>
 </div>
 </div>
@@ -51,19 +51,33 @@
 
 <div class="col-md-4">
 <div class="theme-thumbnail">
-  <h1><a href="https://styx-static.github.io/styx-site/themes/hyde.html">Hyde</a></h1>
-  <a href="https://styx-static.github.io/styx-site/themes/hyde.html"><img class="img-responsive" src="https://styx-static.github.io/styx-site/imgs/themes/hyde-thumb.png" /></a>
+  <h1><a href="https://styx-static.github.io/styx-site/themes/ghostwriter.html">Ghostwriter</a></h1>
+  <a href="https://styx-static.github.io/styx-site/themes/ghostwriter.html"><img class="img-responsive" src="https://styx-static.github.io/styx-site/imgs/themes/ghostwriter-thumb.png" /></a>
 </div>
 </div>
 </div>
 <div class="row"><div class="col-md-4">
 <div class="theme-thumbnail">
-  <h1><a href="https://styx-static.github.io/styx-site/themes/orbit.html">Orbit</a></h1>
-  <a href="https://styx-static.github.io/styx-site/themes/orbit.html"><img class="img-responsive" src="https://styx-static.github.io/styx-site/imgs/themes/orbit-thumb.png" /></a>
+  <h1><a href="https://styx-static.github.io/styx-site/themes/hyde.html">Hyde</a></h1>
+  <a href="https://styx-static.github.io/styx-site/themes/hyde.html"><img class="img-responsive" src="https://styx-static.github.io/styx-site/imgs/themes/hyde-thumb.png" /></a>
 </div>
 </div>
 
 <div class="col-md-4">
+<div class="theme-thumbnail">
+  <h1><a href="https://styx-static.github.io/styx-site/themes/nix.html">Nix</a></h1>
+  <a href="https://styx-static.github.io/styx-site/themes/nix.html"><img class="img-responsive" src="https://styx-static.github.io/styx-site/imgs/themes/nix-thumb.png" /></a>
+</div>
+</div>
+
+<div class="col-md-4">
+<div class="theme-thumbnail">
+  <h1><a href="https://styx-static.github.io/styx-site/themes/orbit.html">Orbit</a></h1>
+  <a href="https://styx-static.github.io/styx-site/themes/orbit.html"><img class="img-responsive" src="https://styx-static.github.io/styx-site/imgs/themes/orbit-thumb.png" /></a>
+</div>
+</div>
+</div>
+<div class="row"><div class="col-md-4">
 <div class="theme-thumbnail">
   <h1><a href="https://styx-static.github.io/styx-site/themes/showcase.html">Showcase</a></h1>
   <a href="https://styx-static.github.io/styx-site/themes/showcase.html"><img class="img-responsive" src="https://styx-static.github.io/styx-site/imgs/themes/showcase-thumb.png" /></a>
