--- a/themes/generic-templates.html
+++ b/themes/generic-templates.html
@@ -12,10 +12,10 @@
 <link href="https://styx-static.github.io/styx-site/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" id="navbar">
 <div class="container">
 <div class="navbar-header">
-  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
     <span class="sr-only">Toggle navigation</span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
@@ -23,13 +23,13 @@
   </button>
   <a class="navbar-brand" href="https://styx-static.github.io/styx-site/">Styx Static Site Generator</a>
 </div>
-<div class="collapse navbar-collapse" id="navbar">
+<div class="collapse navbar-collapse" id="navbar-collapse">
 <ul class="nav navbar-nav navbar-right">
 <li><a href="https://styx-static.github.io/styx-site/news.html">News</a></li>
 <li><a href="https://styx-static.github.io/styx-site/documentation/index.html">Documentation</a></li>
 <li class="active"><a href="https://styx-static.github.io/styx-site/themes.html">Themes</a></li>
 <li><a href="https://github.com/styx-static/styx/">GitHub <i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://styx-static.github.io/styx-site/feed.xml"><i class="fa fa-rss-square" aria-hidden="true"></i></a></li>
+<li><a href="https://styx-static.github.io/styx-site/feed.xml"><i class="fa fa-rss-square" aria-hidden="true"></i><span class="sr-only">RSS</span></a></li>
 </ul>
 </div>
 </div>
