--- a/themes/agency.html
+++ b/themes/agency.html
@@ -57,7 +57,7 @@
 </div>
 </div>
 
-<p class="license">License: <a href="http://spdx.org/licenses/Apache-2.0">Apache License 2.0</a></p>
+<p class="license">License: <a href="https://spdx.org/licenses/Apache-2.0.html">Apache License 2.0</a></p>
 
 <p class="links">
     <a href="https://styx-static.github.io/styx-theme-agency" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
