--- a/themes/generic-templates.html
+++ b/themes/generic-templates.html
@@ -44,7 +44,7 @@
 
 
 
-<p class="license">License: <a href="http://spdx.org/licenses/MIT">MIT License</a></p>
+<p class="license">License: <a href="https://spdx.org/licenses/MIT.html">MIT License</a></p>
 
 <p class="links">
     <a href="https://styx-static.github.io/styx-theme-generic-templates" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
@@ -79,7 +79,7 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Selects bootstrap version to use.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;3.3.7&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;3.3.7&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>lib.font-awesome.enable</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
@@ -91,7 +91,7 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Selects font-awesome version to use.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;4.7.0&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;4.7.0&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>lib.googlefonts</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
@@ -115,13 +115,13 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Style used by highlight.js, for available styles see <a href="https://highlightjs.org/static/demo/" class="bare">https://highlightjs.org/static/demo/</a>.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;default&quot;</code></pre></dd><dt>Example:</dt><dd><pre><code class="nix">&quot;agate&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;default&quot;</code></pre></dd><dt>Example:</dt><dd><pre><code class="nix">&quot;agate&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>lib.highlightjs.version</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Selects highlightjs version to use.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;9.9.0&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;9.9.0&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>lib.jquery.enable</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
@@ -133,7 +133,7 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Selects jQuery version to use.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;3.1.1&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;3.1.1&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>lib.mathjax.enable</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
