--- a/themes/ghostwriter.html
+++ b/themes/ghostwriter.html
@@ -45,7 +45,7 @@ Use the <code>generic-templates</code> theme.</p>
 
 
 
-<p class="license">License: <a href="http://spdx.org/licenses/MIT">MIT License</a></p>
+<p class="license">License: <a href="https://spdx.org/licenses/MIT.html">MIT License</a></p>
 
 <p class="links">
     <a href="https://styx-static.github.io/styx-theme-ghostwriter" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
@@ -62,7 +62,7 @@ Use the <code>generic-templates</code> theme.</p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts per page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code class="nix">3</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>signed integer</dd><dt>Default:</dt><dd><pre><code class="nix">3</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>lib.font-awesome.enable</strong></p>
   <dl><dt>Default:</dt><dd><pre><code class="nix">true</code></pre></dd></dl>
@@ -97,43 +97,43 @@ Use the <code>generic-templates</code> theme.</p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>GitHub link</p>
 </div>
-</dd><dt>Type:</dt><dd>null or string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>social.github</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>GitHub link</p>
 </div>
-</dd><dt>Type:</dt><dd>null or string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>social.gitlab</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>GitHub link</p>
 </div>
-</dd><dt>Type:</dt><dd>null or string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>social.google-plus</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Google plus link</p>
 </div>
-</dd><dt>Type:</dt><dd>null or string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>social.linked-in</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Linked in link</p>
 </div>
-</dd><dt>Type:</dt><dd>null or string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>social.stack-overflow</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Stack overflow link</p>
 </div>
-</dd><dt>Type:</dt><dd>null or string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>social.twitter</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Twitter link</p>
 </div>
-</dd><dt>Type:</dt><dd>null or string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>null or Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">null</code></pre></dd></dl>
 </li></ul>
 </div></div>
 </div>
