--- a/themes/hyde.html
+++ b/themes/hyde.html
@@ -45,7 +45,7 @@ Requires the <code>generic-templates</code> theme.</p>
 
 
 
-<p class="license">License: <a href="http://spdx.org/licenses/MIT">MIT License</a></p>
+<p class="license">License: <a href="https://spdx.org/licenses/MIT.html">MIT License</a></p>
 
 <p class="links">
     <a href="https://styx-static.github.io/styx-theme-hyde" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
@@ -68,7 +68,7 @@ Requires the <code>generic-templates</code> theme.</p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts per page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code class="nix">3</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>signed integer</dd><dt>Default:</dt><dd><pre><code class="nix">3</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>layout.reverse</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
