--- a/themes/showcase.html
+++ b/themes/showcase.html
@@ -75,7 +75,7 @@
 </div>
 </div>
 
-<p class="license">License: <a href="http://spdx.org/licenses/MIT">MIT License</a></p>
+<p class="license">License: <a href="https://spdx.org/licenses/MIT.html">MIT License</a></p>
 
 <p class="links">
     <a href="https://styx-static.github.io/styx-theme-showcase" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
@@ -92,25 +92,25 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts on the archive page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code class="nix">15</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>signed integer</dd><dt>Default:</dt><dd><pre><code class="nix">15</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>index.itemsPerPage</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts on the index page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code class="nix">4</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>signed integer</dd><dt>Default:</dt><dd><pre><code class="nix">4</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.copyright</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Site copyright, added in the footer.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;&amp;copy; 2017&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;&amp;copy; 2017&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.description</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Site description, added in the footer.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;Write a description for your new site here.&quot;</code></pre></dd></dl>
+</dd><dt>Type:</dt><dd>Concatenated string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;Write a description for your new site here.&quot;</code></pre></dd></dl>
 </li></ul>
 </div></div>
 </div>
