--- a/themes/nix.html
+++ b/themes/nix.html
@@ -45,7 +45,7 @@ Requires the <code>generic-templates</code> theme.</p>
 
 
 
-<p class="license">License: <a href="http://spdx.org/licenses/MIT">MIT License</a></p>
+<p class="license">License: <a href="https://spdx.org/licenses/MIT.html">MIT License</a></p>
 
 <p class="links">
     <a href="https://styx-static.github.io/styx-theme-nix" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
