--- a/themes/orbit.html
+++ b/themes/orbit.html
@@ -44,7 +44,7 @@
 
 
 
-<p class="license">License: <a href="http://spdx.org/licenses/CC-BY-3.0">Creative Commons Attribution 3.0</a></p>
+<p class="license">License: <a href="https://spdx.org/licenses/CC-BY-3.0.html">Creative Commons Attribution 3.0</a></p>
 
 <p class="links">
     <a href="https://styx-static.github.io/styx-theme-orbit" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
