--- a/themes/generic-templates.html
+++ b/themes/generic-templates.html
@@ -157,7 +157,7 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>idsite of the website you are tracking in Piwik.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd></dl>
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>services.piwik.enable</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
@@ -169,7 +169,7 @@
   <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Piwik url.</p>
 </div>
-</dd><dt>Type:</dt><dd>string</dd></dl>
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code class="nix">&quot;&quot;</code></pre></dd></dl>
 </li><li class="list-group-item">
   <p><strong>site.title</strong></p>
   <dl><dt>Description:</dt><dd><div class="paragraph">
